--- a/src/schooltool/gradebook/locales/es_SV.po
+++ b/src/schooltool/gradebook/locales/es_SV.po
@@ -10,14 +10,14 @@ msgstr ""
 "Project-Id-Version: schooltool\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2011-10-02 01:45-0600\n"
-"PO-Revision-Date: 2011-10-03 15:52+0000\n"
+"PO-Revision-Date: 2011-10-26 17:24+0000\n"
 "Last-Translator: Douglas Cerna <douglascerna@yahoo.com>\n"
 "Language-Team: Spanish\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2011-10-06 05:08+0000\n"
-"X-Generator: Launchpad (build 14085)\n"
+"X-Launchpad-Export-Date: 2011-10-27 05:46+0000\n"
+"X-Generator: Launchpad (build 14197)\n"
 "Language: \n"
 
 #: /src/schooltool/gradebook/activity.py:52
@@ -2201,7 +2201,7 @@ msgstr ""
 
 #: /src/schooltool/requirement/browser/flourish.zcml:99
 msgid "Actions"
-msgstr ""
+msgstr "Acciones"
 
 #: /src/schooltool/requirement/browser/requirement.pt:5
 msgid "${requirement} Contents"
