--- a/src/schooltool/gradebook/locales/id.po
+++ b/src/schooltool/gradebook/locales/id.po
@@ -455,11 +455,11 @@ msgstr "Termin"
 #: /src/schooltool/gradebook/browser/flourish.zcml:101
 #: /src/schooltool/gradebook/browser/flourish.zcml:577
 msgid "Year"
-msgstr ""
+msgstr "Tahun"
 
 #: /src/schooltool/gradebook/browser/flourish.zcml:122
 msgid "Settings"
-msgstr ""
+msgstr "Pengaturan"
 
 #: /src/schooltool/gradebook/browser/flourish.zcml:160
 #: /src/schooltool/gradebook/browser/pdf_views.py:802
@@ -553,7 +553,7 @@ msgstr ""
 #: /src/schooltool/gradebook/browser/report.zcml:30
 #: /src/schooltool/gradebook/browser/report.zcml:40
 msgid "Group"
-msgstr ""
+msgstr "Grup"
 
 #: /src/schooltool/gradebook/browser/flourish.zcml:756
 #: /src/schooltool/gradebook/browser/report.zcml:20
@@ -646,11 +646,13 @@ msgstr "Nilai $value untuk $name tidak sah."
 msgid "-- No score system --"
 msgstr ""
 
-#: /src/schooltool/gradebook/browser/gradebook.py:1017
+#: /src/schooltool/gradebook/browser/gradebook.py:1539
+#: /src/schooltool/gradebook/browser/gradebook.py:1651
 msgid "Previous"
-msgstr ""
+msgstr "Sebelumnya"
 
-#: /src/schooltool/gradebook/browser/gradebook.py:1027
+#: /src/schooltool/gradebook/browser/gradebook.py:1549
+#: /src/schooltool/gradebook/browser/gradebook.py:1656
 msgid "Next"
 msgstr "Berikutnya"
 
@@ -741,12 +743,12 @@ msgstr ""
 msgid "Student"
 msgstr ""
 
-#: /src/schooltool/gradebook/browser/pdf_views.py:475
-#: /src/schooltool/gradebook/browser/pdf_views.py:661
+#: /src/schooltool/gradebook/browser/pdf_views.py:480
+#: /src/schooltool/gradebook/browser/pdf_views.py:669
 msgid "Course"
-msgstr ""
+msgstr "Kursus"
 
-#: /src/schooltool/gradebook/browser/pdf_views.py:478
+#: /src/schooltool/gradebook/browser/pdf_views.py:483
 msgid "Teacher(s)"
 msgstr ""
 
@@ -1085,7 +1087,7 @@ msgstr ""
 #: /src/schooltool/gradebook/browser/templates/f_template_manage.pt:31
 #: /src/schooltool/gradebook/browser/templates/worksheet_delete.pt:18
 msgid "Delete"
-msgstr ""
+msgstr "Hapus"
 
 #: /src/schooltool/gradebook/browser/templates/f_categories.pt:15
 msgid "Edit this category"
@@ -1097,7 +1099,7 @@ msgstr ""
 #: /src/schooltool/requirement/browser/f_scoresystem_view.pt:36
 #: /src/schooltool/requirement/browser/f_scoresystems_overview.pt:28
 msgid "Done"
-msgstr ""
+msgstr "Selesai"
 
 #: /src/schooltool/gradebook/browser/templates/f_gradebook_grade_activity.pt:15
 #: /src/schooltool/gradebook/browser/templates/f_gradebook_overview.pt:37
@@ -1114,7 +1116,7 @@ msgstr "Nama"
 #: /src/schooltool/requirement/browser/f_scoresystem_add.pt:118
 #: /src/schooltool/requirement/browser/scoresystem_add.pt:111
 msgid "Save"
-msgstr ""
+msgstr "Simpan"
 
 #: /src/schooltool/gradebook/browser/templates/f_gradebook_overview.pt:40
 #: /src/schooltool/gradebook/browser/templates/f_gradebook_overview.pt:124
@@ -1487,7 +1489,7 @@ msgstr ""
 #: /src/schooltool/gradebook/browser/templates/gradebook_column_preferences.pt:68
 #: /src/schooltool/requirement/browser/scoresystems_overview.pt:38
 msgid "Update"
-msgstr ""
+msgstr "Perbarui"
 
 #: /src/schooltool/gradebook/browser/templates/gradebook_column_preferences.pt:92
 msgid "Create Summary Worksheets"
@@ -1908,7 +1910,7 @@ msgstr ""
 
 #: /src/schooltool/requirement/browser/f_scoresystem_add.pt:80
 msgid "Type"
-msgstr ""
+msgstr "Tipe"
 
 #: /src/schooltool/requirement/browser/f_scoresystem_add.pt:83
 msgid ""
@@ -1963,7 +1965,7 @@ msgstr ""
 
 #: /src/schooltool/requirement/browser/f_scoresystems_overview.pt:24
 msgid "There are none."
-msgstr ""
+msgstr "Tidak ada sama sekali."
 
 #: /src/schooltool/requirement/browser/f_scoresystems_related.pt:6
 msgid ""
@@ -1973,7 +1975,7 @@ msgstr ""
 
 #: /src/schooltool/requirement/browser/flourish.zcml:99
 msgid "Actions"
-msgstr ""
+msgstr "Tindakan-tindakan"
 
 #: /src/schooltool/requirement/browser/requirement.pt:5
 msgid "${requirement} Contents"
@@ -2047,15 +2049,15 @@ msgstr ""
 msgid "Duplicate abbreviations are not allowed."
 msgstr ""
 
-#: /src/schooltool/requirement/browser/scoresystem.py:257
+#: /src/schooltool/requirement/browser/scoresystem.py:265
 msgid "Yes"
-msgstr ""
+msgstr "Ya"
 
-#: /src/schooltool/requirement/browser/scoresystem.py:259
+#: /src/schooltool/requirement/browser/scoresystem.py:267
 msgid "No"
-msgstr ""
+msgstr "Tidak"
 
-#: /src/schooltool/requirement/browser/scoresystem.py:294
+#: /src/schooltool/requirement/browser/scoresystem.py:291
 msgid "Existing Score System"
 msgstr ""
 
