--- a/src/schooltool/gradebook/locales/km.po
+++ b/src/schooltool/gradebook/locales/km.po
@@ -456,11 +456,11 @@ msgstr "វគ្គ"
 #: /src/schooltool/gradebook/browser/flourish.zcml:101
 #: /src/schooltool/gradebook/browser/flourish.zcml:577
 msgid "Year"
-msgstr ""
+msgstr "ឆ្នាំ"
 
 #: /src/schooltool/gradebook/browser/flourish.zcml:122
 msgid "Settings"
-msgstr ""
+msgstr "ការកំណត់"
 
 #: /src/schooltool/gradebook/browser/flourish.zcml:160
 #: /src/schooltool/gradebook/browser/pdf_views.py:802
@@ -554,7 +554,7 @@ msgstr ""
 #: /src/schooltool/gradebook/browser/report.zcml:30
 #: /src/schooltool/gradebook/browser/report.zcml:40
 msgid "Group"
-msgstr ""
+msgstr "ក្រុម"
 
 #: /src/schooltool/gradebook/browser/flourish.zcml:756
 #: /src/schooltool/gradebook/browser/report.zcml:20
@@ -625,8 +625,8 @@ msgid ""
 "You have some changes that have not been saved.  Click OK to save now or "
 "CANCEL to continue without saving."
 msgstr ""
-"អ្នក​មាន​ការ​ផ្លាស់ប្ដូរ​មួយ​ចំនួន​ដែល​មិន​បាន​រក្សា​ទុក ។  ចុច យល់ព្រម "
-"ដើម្បី​រក្សា​ទុក​ឥឡូវ​នេះ ឬ បោះបង់ ដើម្បី​បន្ត​ដោយ​មិន​រក្សា​ទុក ។"
+"អ្នក​មាន​ការ​ផ្លាស់ប្ដូរ​មួយ​ចំនួន​ដែល​មិន​បាន​រក្សា​ទុក ។  ចុច យល់ព្រម ដើម្បី​រក្សា​ទុក​ឥឡូវ​នេះ ឬ បោះបង់ ដើម្បី​"
+"បន្ត​ដោយ​មិន​រក្សា​ទុក ។"
 
 #: /src/schooltool/gradebook/browser/gradebook.py:509
 msgid "Invalid scores (highlighted in red) were not saved."
@@ -735,8 +735,7 @@ msgstr "ពិន្ទុ​ជាប់ ៖"
 
 #: /src/schooltool/gradebook/browser/pdf_views.py:474
 msgid "The following students are at risk of failing the following courses:"
-msgstr ""
-"សិស្ស​ខាងក្រោម​នេះ​ប្រឈម​មុខ​និង​ការ​ធ្លាក់​វគ្គ​សិក្សា​ដូច​ខាង​ក្រោម ៖"
+msgstr "សិស្ស​ខាងក្រោម​នេះ​ប្រឈម​មុខ​និង​ការ​ធ្លាក់​វគ្គ​សិក្សា​ដូច​ខាង​ក្រោម ៖"
 
 #: /src/schooltool/gradebook/browser/pdf_views.py:477
 #: /src/schooltool/gradebook/browser/pdf_views.py:627
@@ -814,11 +813,11 @@ msgstr "អវត្ដមាន​​​តាម​ថ្ងៃ"
 msgid "Lists students absent on a given day."
 msgstr ""
 
-#: /src/schooltool/gradebook/browser/report.zcml:57
+#: /src/schooltool/gradebook/browser/report.zcml:63
 msgid "School Year"
-msgstr ""
+msgstr "ឆ្នាំ​សិក្សា"
 
-#: /src/schooltool/gradebook/browser/report.zcml:66
+#: /src/schooltool/gradebook/browser/report.zcml:73
 msgid "Absences by Section"
 msgstr ""
 
@@ -1117,7 +1116,7 @@ msgstr ""
 #: /src/schooltool/requirement/browser/f_scoresystem_view.pt:36
 #: /src/schooltool/requirement/browser/f_scoresystems_overview.pt:28
 msgid "Done"
-msgstr ""
+msgstr "ធ្វើ​រួច"
 
 #: /src/schooltool/gradebook/browser/templates/f_gradebook_grade_activity.pt:15
 #: /src/schooltool/gradebook/browser/templates/f_gradebook_overview.pt:37
@@ -1975,7 +1974,7 @@ msgstr ""
 
 #: /src/schooltool/requirement/browser/f_scoresystem_add.pt:80
 msgid "Type"
-msgstr ""
+msgstr "ប្រភេទ"
 
 #: /src/schooltool/requirement/browser/f_scoresystem_add.pt:83
 msgid ""
@@ -2044,7 +2043,7 @@ msgstr ""
 
 #: /src/schooltool/requirement/browser/f_scoresystems_overview.pt:24
 msgid "There are none."
-msgstr ""
+msgstr "គ្មាន ។"
 
 #: /src/schooltool/requirement/browser/f_scoresystems_related.pt:6
 msgid ""
@@ -2054,7 +2053,7 @@ msgstr ""
 
 #: /src/schooltool/requirement/browser/flourish.zcml:99
 msgid "Actions"
-msgstr ""
+msgstr "អំពើ"
 
 #: /src/schooltool/requirement/browser/requirement.pt:5
 msgid "${requirement} Contents"
