--- a/src/schooltool/gradebook/locales/nb.po
+++ b/src/schooltool/gradebook/locales/nb.po
@@ -455,11 +455,11 @@ msgstr "Termin"
 #: /src/schooltool/gradebook/browser/flourish.zcml:101
 #: /src/schooltool/gradebook/browser/flourish.zcml:577
 msgid "Year"
-msgstr ""
+msgstr "År"
 
 #: /src/schooltool/gradebook/browser/flourish.zcml:122
 msgid "Settings"
-msgstr ""
+msgstr "Innstillinger"
 
 #: /src/schooltool/gradebook/browser/flourish.zcml:160
 #: /src/schooltool/gradebook/browser/pdf_views.py:802
@@ -553,7 +553,7 @@ msgstr ""
 #: /src/schooltool/gradebook/browser/report.zcml:30
 #: /src/schooltool/gradebook/browser/report.zcml:40
 msgid "Group"
-msgstr ""
+msgstr "Gruppe"
 
 #: /src/schooltool/gradebook/browser/flourish.zcml:756
 #: /src/schooltool/gradebook/browser/report.zcml:20
@@ -808,11 +808,11 @@ msgstr ""
 msgid "Lists students absent on a given day."
 msgstr ""
 
-#: /src/schooltool/gradebook/browser/report.zcml:57
+#: /src/schooltool/gradebook/browser/report.zcml:63
 msgid "School Year"
-msgstr ""
+msgstr "Skoleår"
 
-#: /src/schooltool/gradebook/browser/report.zcml:66
+#: /src/schooltool/gradebook/browser/report.zcml:73
 msgid "Absences by Section"
 msgstr ""
 
@@ -1487,7 +1487,7 @@ msgstr ""
 #: /src/schooltool/gradebook/browser/templates/gradebook_column_preferences.pt:68
 #: /src/schooltool/requirement/browser/scoresystems_overview.pt:38
 msgid "Update"
-msgstr ""
+msgstr "Oppdater"
 
 #: /src/schooltool/gradebook/browser/templates/gradebook_column_preferences.pt:92
 msgid "Create Summary Worksheets"
@@ -1908,7 +1908,7 @@ msgstr ""
 
 #: /src/schooltool/requirement/browser/f_scoresystem_add.pt:80
 msgid "Type"
-msgstr ""
+msgstr "Type"
 
 #: /src/schooltool/requirement/browser/f_scoresystem_add.pt:83
 msgid ""
@@ -1963,7 +1963,7 @@ msgstr ""
 
 #: /src/schooltool/requirement/browser/f_scoresystems_overview.pt:24
 msgid "There are none."
-msgstr ""
+msgstr "Ingen å finne."
 
 #: /src/schooltool/requirement/browser/f_scoresystems_related.pt:6
 msgid ""
@@ -1973,7 +1973,7 @@ msgstr ""
 
 #: /src/schooltool/requirement/browser/flourish.zcml:99
 msgid "Actions"
-msgstr ""
+msgstr "Handlinger"
 
 #: /src/schooltool/requirement/browser/requirement.pt:5
 msgid "${requirement} Contents"
@@ -2047,15 +2047,15 @@ msgstr ""
 msgid "Duplicate abbreviations are not allowed."
 msgstr ""
 
-#: /src/schooltool/requirement/browser/scoresystem.py:257
+#: /src/schooltool/requirement/browser/scoresystem.py:265
 msgid "Yes"
-msgstr ""
+msgstr "Ja"
 
-#: /src/schooltool/requirement/browser/scoresystem.py:259
+#: /src/schooltool/requirement/browser/scoresystem.py:267
 msgid "No"
-msgstr ""
+msgstr "Nei"
 
-#: /src/schooltool/requirement/browser/scoresystem.py:294
+#: /src/schooltool/requirement/browser/scoresystem.py:291
 msgid "Existing Score System"
 msgstr ""
 
