--- a/src/schooltool/gradebook/locales/ro.po
+++ b/src/schooltool/gradebook/locales/ro.po
@@ -439,7 +439,7 @@ msgstr ""
 #: /src/schooltool/gradebook/browser/templates/gradebook_overview.pt:81
 #: /src/schooltool/gradebook/browser/templates/mygrades.pt:37
 msgid "Section"
-msgstr ""
+msgstr "Secțiune"
 
 #: /src/schooltool/gradebook/browser/flourish.zcml:90
 #: /src/schooltool/gradebook/browser/flourish.zcml:566
@@ -455,7 +455,7 @@ msgstr ""
 #: /src/schooltool/gradebook/browser/flourish.zcml:101
 #: /src/schooltool/gradebook/browser/flourish.zcml:577
 msgid "Year"
-msgstr ""
+msgstr "An"
 
 #: /src/schooltool/gradebook/browser/flourish.zcml:122
 msgid "Settings"
@@ -553,7 +553,7 @@ msgstr ""
 #: /src/schooltool/gradebook/browser/report.zcml:30
 #: /src/schooltool/gradebook/browser/report.zcml:40
 msgid "Group"
-msgstr ""
+msgstr "Grup"
 
 #: /src/schooltool/gradebook/browser/flourish.zcml:756
 #: /src/schooltool/gradebook/browser/report.zcml:20
@@ -743,12 +743,12 @@ msgstr ""
 msgid "Student"
 msgstr ""
 
-#: /src/schooltool/gradebook/browser/pdf_views.py:475
-#: /src/schooltool/gradebook/browser/pdf_views.py:661
+#: /src/schooltool/gradebook/browser/pdf_views.py:480
+#: /src/schooltool/gradebook/browser/pdf_views.py:669
 msgid "Course"
-msgstr ""
+msgstr "Curs"
 
-#: /src/schooltool/gradebook/browser/pdf_views.py:478
+#: /src/schooltool/gradebook/browser/pdf_views.py:483
 msgid "Teacher(s)"
 msgstr ""
 
@@ -983,7 +983,7 @@ msgstr ""
 #: /src/schooltool/gradebook/browser/templates/gradebook_column_preferences.pt:21
 #: /src/schooltool/gradebook/interfaces.py:138
 msgid "Label"
-msgstr ""
+msgstr "Etichetă"
 
 #: /src/schooltool/gradebook/browser/templates/categories.pt:4
 #: /src/schooltool/gradebook/browser/templates/categories.pt:15
@@ -1087,7 +1087,7 @@ msgstr ""
 #: /src/schooltool/gradebook/browser/templates/f_template_manage.pt:31
 #: /src/schooltool/gradebook/browser/templates/worksheet_delete.pt:18
 msgid "Delete"
-msgstr ""
+msgstr "Şterge"
 
 #: /src/schooltool/gradebook/browser/templates/f_categories.pt:15
 msgid "Edit this category"
@@ -1489,7 +1489,7 @@ msgstr ""
 #: /src/schooltool/gradebook/browser/templates/gradebook_column_preferences.pt:68
 #: /src/schooltool/requirement/browser/scoresystems_overview.pt:38
 msgid "Update"
-msgstr ""
+msgstr "Actualizează"
 
 #: /src/schooltool/gradebook/browser/templates/gradebook_column_preferences.pt:92
 msgid "Create Summary Worksheets"
@@ -1758,11 +1758,11 @@ msgstr ""
 msgid "Activities in this gradebook."
 msgstr ""
 
-#: /src/schooltool/gradebook/interfaces.py:209
+#: /src/schooltool/gradebook/interfaces.py:222
 msgid "Students"
-msgstr ""
+msgstr "Studenți"
 
-#: /src/schooltool/gradebook/interfaces.py:210
+#: /src/schooltool/gradebook/interfaces.py:223
 msgid "Students in this gradebook."
 msgstr ""
 
@@ -1965,7 +1965,7 @@ msgstr ""
 
 #: /src/schooltool/requirement/browser/f_scoresystems_overview.pt:24
 msgid "There are none."
-msgstr ""
+msgstr "Nu există niciunul."
 
 #: /src/schooltool/requirement/browser/f_scoresystems_related.pt:6
 msgid ""
@@ -1975,7 +1975,7 @@ msgstr ""
 
 #: /src/schooltool/requirement/browser/flourish.zcml:99
 msgid "Actions"
-msgstr ""
+msgstr "Acțiuni"
 
 #: /src/schooltool/requirement/browser/requirement.pt:5
 msgid "${requirement} Contents"
@@ -2049,15 +2049,15 @@ msgstr ""
 msgid "Duplicate abbreviations are not allowed."
 msgstr ""
 
-#: /src/schooltool/requirement/browser/scoresystem.py:257
+#: /src/schooltool/requirement/browser/scoresystem.py:265
 msgid "Yes"
-msgstr ""
+msgstr "Da"
 
-#: /src/schooltool/requirement/browser/scoresystem.py:259
+#: /src/schooltool/requirement/browser/scoresystem.py:267
 msgid "No"
-msgstr ""
+msgstr "Nu"
 
-#: /src/schooltool/requirement/browser/scoresystem.py:294
+#: /src/schooltool/requirement/browser/scoresystem.py:291
 msgid "Existing Score System"
 msgstr ""
 
