--- a/src/schooltool/gradebook/locales/tr.po
+++ b/src/schooltool/gradebook/locales/tr.po
@@ -440,7 +440,7 @@ msgstr ""
 #: /src/schooltool/gradebook/browser/templates/gradebook_overview.pt:81
 #: /src/schooltool/gradebook/browser/templates/mygrades.pt:37
 msgid "Section"
-msgstr ""
+msgstr "Bölüm"
 
 #: /src/schooltool/gradebook/browser/flourish.zcml:90
 #: /src/schooltool/gradebook/browser/flourish.zcml:566
@@ -456,11 +456,11 @@ msgstr "Dönem"
 #: /src/schooltool/gradebook/browser/flourish.zcml:101
 #: /src/schooltool/gradebook/browser/flourish.zcml:577
 msgid "Year"
-msgstr ""
+msgstr "Yıl"
 
 #: /src/schooltool/gradebook/browser/flourish.zcml:122
 msgid "Settings"
-msgstr ""
+msgstr "Ayarlar"
 
 #: /src/schooltool/gradebook/browser/flourish.zcml:160
 #: /src/schooltool/gradebook/browser/pdf_views.py:802
@@ -554,7 +554,7 @@ msgstr ""
 #: /src/schooltool/gradebook/browser/report.zcml:30
 #: /src/schooltool/gradebook/browser/report.zcml:40
 msgid "Group"
-msgstr ""
+msgstr "Grup"
 
 #: /src/schooltool/gradebook/browser/flourish.zcml:756
 #: /src/schooltool/gradebook/browser/report.zcml:20
@@ -647,11 +647,13 @@ msgstr ""
 msgid "-- No score system --"
 msgstr ""
 
-#: /src/schooltool/gradebook/browser/gradebook.py:1021
+#: /src/schooltool/gradebook/browser/gradebook.py:1539
+#: /src/schooltool/gradebook/browser/gradebook.py:1651
 msgid "Previous"
-msgstr ""
+msgstr "Önceki"
 
-#: /src/schooltool/gradebook/browser/gradebook.py:1031
+#: /src/schooltool/gradebook/browser/gradebook.py:1549
+#: /src/schooltool/gradebook/browser/gradebook.py:1656
 msgid "Next"
 msgstr "Sonraki"
 
@@ -809,11 +811,11 @@ msgstr ""
 msgid "Lists students absent on a given day."
 msgstr ""
 
-#: /src/schooltool/gradebook/browser/report.zcml:57
+#: /src/schooltool/gradebook/browser/report.zcml:63
 msgid "School Year"
-msgstr ""
+msgstr "Okul Yılı"
 
-#: /src/schooltool/gradebook/browser/report.zcml:66
+#: /src/schooltool/gradebook/browser/report.zcml:73
 msgid "Absences by Section"
 msgstr ""
 
@@ -1014,7 +1016,7 @@ msgstr ""
 #. Default: "Add"
 #: /src/schooltool/gradebook/browser/templates/categories.pt:42
 msgid "add-button"
-msgstr ""
+msgstr "Ekle"
 
 #. Default: "Change"
 #: /src/schooltool/gradebook/browser/templates/categories.pt:51
@@ -1086,7 +1088,7 @@ msgstr ""
 #: /src/schooltool/gradebook/browser/templates/f_template_manage.pt:31
 #: /src/schooltool/gradebook/browser/templates/worksheet_delete.pt:18
 msgid "Delete"
-msgstr ""
+msgstr "Sil"
 
 #: /src/schooltool/gradebook/browser/templates/f_categories.pt:15
 msgid "Edit this category"
@@ -1098,7 +1100,7 @@ msgstr ""
 #: /src/schooltool/requirement/browser/f_scoresystem_view.pt:36
 #: /src/schooltool/requirement/browser/f_scoresystems_overview.pt:28
 msgid "Done"
-msgstr ""
+msgstr "Tamamlandı"
 
 #: /src/schooltool/gradebook/browser/templates/f_gradebook_grade_activity.pt:15
 #: /src/schooltool/gradebook/browser/templates/f_gradebook_overview.pt:37
@@ -1106,7 +1108,7 @@ msgstr ""
 #: /src/schooltool/gradebook/browser/templates/gradebook_grade_activity.pt:37
 #: /src/schooltool/gradebook/browser/templates/gradebook_overview.pt:140
 msgid "Name"
-msgstr ""
+msgstr "Ad"
 
 #: /src/schooltool/gradebook/browser/templates/f_gradebook_grade_activity.pt:59
 #: /src/schooltool/gradebook/browser/templates/f_gradebook_overview.pt:304
@@ -1115,7 +1117,7 @@ msgstr ""
 #: /src/schooltool/requirement/browser/f_scoresystem_add.pt:118
 #: /src/schooltool/requirement/browser/scoresystem_add.pt:111
 msgid "Save"
-msgstr ""
+msgstr "Kaydet"
 
 #: /src/schooltool/gradebook/browser/templates/f_gradebook_overview.pt:40
 #: /src/schooltool/gradebook/browser/templates/f_gradebook_overview.pt:124
@@ -1488,7 +1490,7 @@ msgstr ""
 #: /src/schooltool/gradebook/browser/templates/gradebook_column_preferences.pt:68
 #: /src/schooltool/requirement/browser/scoresystems_overview.pt:38
 msgid "Update"
-msgstr ""
+msgstr "Güncelle"
 
 #: /src/schooltool/gradebook/browser/templates/gradebook_column_preferences.pt:92
 msgid "Create Summary Worksheets"
@@ -1909,7 +1911,7 @@ msgstr ""
 
 #: /src/schooltool/requirement/browser/f_scoresystem_add.pt:80
 msgid "Type"
-msgstr ""
+msgstr "Tip"
 
 #: /src/schooltool/requirement/browser/f_scoresystem_add.pt:83
 msgid ""
@@ -1964,7 +1966,7 @@ msgstr ""
 
 #: /src/schooltool/requirement/browser/f_scoresystems_overview.pt:24
 msgid "There are none."
-msgstr ""
+msgstr "Hiç yok."
 
 #: /src/schooltool/requirement/browser/f_scoresystems_related.pt:6
 msgid ""
@@ -1974,7 +1976,7 @@ msgstr ""
 
 #: /src/schooltool/requirement/browser/flourish.zcml:99
 msgid "Actions"
-msgstr ""
+msgstr "Eylemler"
 
 #: /src/schooltool/requirement/browser/requirement.pt:5
 msgid "${requirement} Contents"
@@ -1990,11 +1992,11 @@ msgstr "Şimdi Bul"
 
 #: /src/schooltool/requirement/browser/requirement.pt:22
 msgid "Clear"
-msgstr ""
+msgstr "Temizle"
 
 #: /src/schooltool/requirement/browser/requirement.pt:32
 msgid "Showing ${count} of ${total} items"
-msgstr ""
+msgstr "${count} / ${total} öge gösteriliyor"
 
 #: /src/schooltool/requirement/browser/requirement.py:55
 msgid "Requirement index"
@@ -2048,15 +2050,15 @@ msgstr ""
 msgid "Duplicate abbreviations are not allowed."
 msgstr ""
 
-#: /src/schooltool/requirement/browser/scoresystem.py:257
+#: /src/schooltool/requirement/browser/scoresystem.py:265
 msgid "Yes"
-msgstr ""
+msgstr "Evet"
 
-#: /src/schooltool/requirement/browser/scoresystem.py:259
+#: /src/schooltool/requirement/browser/scoresystem.py:267
 msgid "No"
-msgstr ""
+msgstr "Hayır"
 
-#: /src/schooltool/requirement/browser/scoresystem.py:294
+#: /src/schooltool/requirement/browser/scoresystem.py:291
 msgid "Existing Score System"
 msgstr ""
 
