Fix links in CHANGES

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -6,7 +6,7 @@ CHANGES
 ------------------
 
 - Column header in the Detailed Student Report spans beyond column borders.
-  (https://lauchpad.net/bugs/837156)
+  (https://launchpad.net/bugs/837156)
 
 
 1.9.3 (2011-11-18)
@@ -19,13 +19,13 @@ New features
 - Set title before deploying a report sheet.
 - Too easy to deploy duplicate report sheets (https://launchpad.net/bugs/836732)
 - "Report" in student pop up menu that brings up the same view as student sees
-  (https://lauchpad.net/bugs/887122)
+  (https://launchpad.net/bugs/887122)
 
 
 Bugfixes
 ++++++++
 
-- Selecting score system for average column does nothing (https://lauchpad.net/bugs/882061)
+- Selecting score system for average column does nothing (https://launchpad.net/bugs/882061)
 - Gradebook menuitem fails when person teaches and attends sections (https://launchpad.net/bugs/885823)
 - All tests fixed
 
@@ -33,9 +33,9 @@ Bugfixes
 1.9.2 (2011-11-02)
 ------------------
 
-- Fixed the overzealous security checks to improve performance (https://lauchpad.net/bugs/561217)
-- Add a link from Section to Gradebook (https://lauchpad.net/bugs/868426)
-- Fix Gradebook breadcrumb (https://lauchpad.net/bugs/868431)
+- Fixed the overzealous security checks to improve performance (https://launchpad.net/bugs/561217)
+- Add a link from Section to Gradebook (https://launchpad.net/bugs/868426)
+- Fix Gradebook breadcrumb (https://launchpad.net/bugs/868431)
 - Updated translations
 
 
@@ -77,7 +77,7 @@ Bugfixes
 ++++++++
 
 - Move custom score systems to a new container. Fixes crash on startup
-  if gradebook has been disabled after use (https://lauchpad.net/bugs/717277).
+  if gradebook has been disabled after use (https://launchpad.net/bugs/717277).
 - Run functional tests without journal, add separate tests that need journal to
   another layer (https://launchpad.net/bugs/783540).
 - Fixed crash when there were scores only for non-weighted activities (https://launchpad.net/bugs/801121).
